<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.kalkulator.KalkulatorFragment">

    <LinearLayout
        android:orientation="vertical"
        android:background="@color/window_background"
        tools:context=".MainActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Switch
            android:id="@+id/switch1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="NIGHT MODE"
            android:textSize="20sp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            style="@style/Switch"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="bottom"
            android:padding="30dp"
            style="@style/Screen"
            android:orientation="vertical">

            <TextView
                android:id="@+id/input"
                android:layout_width="match_parent"
                android:layout_height="114dp"
                android:gravity="end"
                android:textSize="30sp"
                tools:text="5+10-3" />

            <TextView
                android:id="@+id/output"
                android:layout_width="match_parent"
                android:layout_height="102dp"
                android:gravity="end"
                android:textColor="@color/green"
                android:textSize="50sp"
                tools:text="12" />

        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="460dp"
            android:paddingTop="10dp"
            android:stretchColumns="*"
            style="@style/Screen"
            app:layout_constraintBottom_toBottomOf="parent">

            <TableRow>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_clear"
                    style="@style/Button_Style"
                    android:layout_width="wrap_content"
                    android:layout_height="90dp"
                    android:text="@string/clear" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_bracket_left"
                    style="@style/Button_Style"
                    android:layout_width="wrap_content"
                    android:layout_height="90dp"
                    android:text="@string/left" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_bracket_right"
                    style="@style/Button_Style"
                    android:layout_width="wrap_content"
                    android:layout_height="90dp"
                    android:text="@string/right" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_division"
                    style="@style/Button_Style"
                    android:layout_width="wrap_content"
                    android:layout_height="90dp"
                    android:text="@string/division" />

            </TableRow>

            <TableRow>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_7"
                    style="@style/Button_Style"
                    android:layout_width="wrap_content"
                    android:layout_height="90dp"
                    android:text="@string/seven" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_8"
                    style="@style/Button_Style"
                    android:layout_width="wrap_content"
                    android:layout_height="90dp"
                    android:text="@string/eight" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_9"
                    style="@style/Button_Style"
                    android:layout_width="wrap_content"
                    android:layout_height="90dp"
                    android:text="@string/nine" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_multiply"
                    style="@style/Button_Style"
                    android:layout_width="wrap_content"
                    android:layout_height="90dp"
                    android:text="@string/multiply" />

            </TableRow>

            <TableRow>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_4"
                    style="@style/Button_Style"
                    android:layout_width="wrap_content"
                    android:layout_height="90dp"
                    android:text="@string/four" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_5"
                    style="@style/Button_Style"
                    android:layout_width="wrap_content"
                    android:layout_height="90dp"
                    android:text="@string/five" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_6"
                    style="@style/Button_Style"
                    android:layout_width="wrap_content"
                    android:layout_height="90dp"
                    android:text="@string/six" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_subtraction"
                    style="@style/Button_Style"
                    android:layout_width="wrap_content"
                    android:layout_height="90dp"
                    android:text="@string/subtraction" />

            </TableRow>

            <TableRow>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_1"
                    style="@style/Button_Style"
                    android:layout_width="wrap_content"
                    android:layout_height="90dp"
                    android:text="@string/one" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_2"
                    style="@style/Button_Style"
                    android:layout_width="wrap_content"
                    android:layout_height="90dp"
                    android:text="@string/two" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_3"
                    style="@style/Button_Style"
                    android:layout_width="wrap_content"
                    android:layout_height="90dp"
                    android:text="@string/three" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_addition"
                    style="@style/Button_Style"
                    android:layout_width="wrap_content"
                    android:layout_height="90dp"
                    android:text="@string/addition" />

            </TableRow>

            <TableRow>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_0"
                    style="@style/Button_Style"
                    android:layout_width="wrap_content"
                    android:layout_height="90dp"
                    android:text="@string/zero" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_dot"
                    style="@style/Button_Style"
                    android:layout_width="wrap_content"
                    android:layout_height="90dp"
                    android:text="@string/dot" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_equals"
                    style="@style/Button_Style"
                    android:layout_width="0dp"
                    android:layout_height="90dp"
                    android:layout_weight="1"
                    android:background="@color/green"
                    android:text="@string/equals" />

            </TableRow>
        </TableLayout>
    </LinearLayout>
</ScrollView>
